--- a/index.html
+++ b/index.html
@@ -269,8 +269,12 @@
 
       <!-- Step 1 -->
       <div class="card stack" id="step1" style="background:rgba(255,255,255,.55)">
-        <h2>Step 1: Answer this 💌</h2>
-        <p class="hint">Tip: keep it something only you two know.</p>
+        <h2>Step 1: Solve the riddle 💌</h2>
+<p class="hint">
+Not a person, not a date,<br>
+But a place where our story began.<br>
+Where was it?
+</p>
         <input class="input" id="answer" placeholder="Type the answer..." />
         <div class="row" style="justify-content:space-between">
           <span id="msg1" class="msg"></span>
