--- a/index.html
+++ b/index.html
@@ -360,15 +360,16 @@ Where was it?
      ***************/
     const CONFIG = {
       // Step 1 correct answer (case-insensitive)
-      answer: "tumi amar shanti",
+      answer: "Segafredo",
 
       // Names/text on reveal
-      personName: "Mim",
+      personName: "Sakib",
       subtitle: "Today is yours. I’m just lucky to be part of it.",
-      longText: `Happy Birthday, Mim 💗
-I hope today wraps you in peace, laughter, and all the love you give to everyone else.
-Thank you for being you — kind, strong, beautiful, and soft in the best ways.
-I’m proud of you, and I’m always cheering for you. 💐`,
+      longText: `Happiest Birthday, my love! 💗
+I really hope you get to be the happiest, and I hope your frontal lobe is fully devloped now, as the time is nearly finished :)
+Thank you for being the most kindest and perfect man anyone could ever ask for. 
+Whatever happens, do know I’m always proud of you, and I’m always cheering for you. You are indeed the best son, best friend, best brother and 
+the bestest partner out there. From the bottom of my heart, I love you the most, Towhidul Islam!`,
 
       quotes: [
         "“You make ordinary days feel like magic.”",
