--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Where was it?
      ***************/
     const CONFIG = {
       // Step 1 correct answer (case-insensitive)
-      answer: "Segafredo",
+      answer: "segafredo",
 
       // Names/text on reveal
       personName: "Sakib",
