--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ the bestest partner out there. From the bottom of my heart, I love you the most,
       ],
 
       // Puzzle image (use a clear photo)
-      puzzleImage: "https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=1200&q=80",
+      puzzleImage: "photo.jpg",
 
       // Memory game emojis (pairs will be created)
       memoryIcons: ["💖","🎀","🌷","🍰","✨","🧸"]
