--- a/index.html
+++ b/index.html
@@ -88,31 +88,24 @@
       font-size:13px;
     }
 
-    /* Cute floating hearts */
+    /* Cute floating stickers */
     .floaters{position:fixed;inset:0;pointer-events:none;overflow:hidden}
-    .heart{
-      position:absolute;
-      width:14px;height:14px;
-      background: rgba(255,77,166,.35);
-      transform: rotate(45deg);
-      border-radius: 3px;
-      animation: rise linear infinite;
-      filter: blur(.2px);
-    }
-    .heart:before,.heart:after{
-      content:"";
-      position:absolute;
-      width:14px;height:14px;
-      background: inherit;
-      border-radius:50%;
-    }
-    .heart:before{left:-7px;top:0}
-    .heart:after{left:0;top:-7px}
-    @keyframes rise{
-      from{transform: translateY(30vh) rotate(45deg); opacity:0}
-      10%{opacity:1}
-      to{transform: translateY(-120vh) rotate(45deg); opacity:0}
-    }
+    /* Floating Marvel stickers */
+.floaterSticker{
+  position:absolute;
+  width:60px;
+  height:60px;
+  object-fit:contain;
+  pointer-events:none;
+  animation: floatUp linear infinite;
+  filter: drop-shadow(0 10px 18px rgba(0,0,0,.25));
+}
+
+@keyframes floatUp{
+  0%   { transform: translateY(30vh) rotate(-10deg) scale(.9); opacity:0; }
+  15%  { opacity:1; }
+  100% { transform: translateY(-130vh) rotate(15deg) scale(1.05); opacity:0; }
+}
 
     /* Stepper */
     .steps{display:flex;gap:10px;flex-wrap:wrap}
@@ -416,33 +409,36 @@ the bestest partner out there. From the bottom of my heart, I love you the most,
         floaters.appendChild(h);
       }
     }
-    spawnHearts();
+   function spawnHearts(){
+  const STICKERS = [
+    "bat.png",
+    "batman.jpg",
+    "r spider.png",
+    "spidey.png",
+    "superman.jpg"
+  ];
 
-    /***************
-     * Steps state
-     ***************/
-    const s1 = document.getElementById("s1");
-    const s2 = document.getElementById("s2");
-    const s3 = document.getElementById("s3");
+  for (let i = 0; i < 18; i++){
+    const img = document.createElement("img");
+    img.className = "floaterSticker";
+    img.src = STICKERS[Math.floor(Math.random() * STICKERS.length)];
 
-    const step1 = document.getElementById("step1");
-    const step2 = document.getElementById("step2");
-    const step3 = document.getElementById("step3");
+    const left = Math.random() * 100;
+    const dur = 6 + Math.random() * 8;
+    const delay = Math.random() * 6;
+    const size = 34 + Math.random() * 34;
 
-    const msg1 = document.getElementById("msg1");
-    const msg2 = document.getElementById("msg2");
-    const msg3 = document.getElementById("msg3");
+    img.style.left = left + "vw";
+    img.style.bottom = (-20 - Math.random() * 30) + "vh";
+    img.style.animationDuration = dur + "s";
+    img.style.animationDelay = delay + "s";
+    img.style.width = size + "px";
+    img.style.height = size + "px";
+    img.style.opacity = (0.35 + Math.random() * 0.6).toFixed(2);
 
-    const openBtn = document.getElementById("open");
-
-    function setActive(which){
-      [s1,s2,s3].forEach(x=>x.classList.remove("active"));
-      which.classList.add("active");
-    }
-    function markDone(which){
-      which.classList.add("done");
-      which.classList.remove("active");
-    }
+    floaters.appendChild(img);
+  }
+}
 
     /***************
      * Step 1: question
