--- a/index.html
+++ b/index.html
@@ -4,6 +4,39 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Unlock the Surprise ✨</title>
+<style>
+  /* ============================= */
+/* Floating Marvel Stickers     */
+/* ============================= */
+
+.floaters{
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.floaterSticker{
+  position: absolute;
+  object-fit: contain;
+  animation: floatUp linear infinite;
+  filter: drop-shadow(0 10px 18px rgba(0,0,0,.25));
+}
+
+@keyframes floatUp{
+  0%{
+    transform: translateY(30vh) rotate(-10deg) scale(.9);
+    opacity:0;
+  }
+  15%{ opacity:1; }
+  100%{
+    transform: translateY(-130vh) rotate(15deg) scale(1.05);
+    opacity:0;
+  }
+} 
+  <style/>
+  
   <style>
     :root{
       --bg1:#fff1f7;
@@ -387,58 +420,38 @@ the bestest partner out there. From the bottom of my heart, I love you the most,
       memoryIcons: ["💖","🎀","🌷","🍰","✨","🧸"]
     };
 
-    /***************
-     * Cute floating hearts
-     ***************/
-    const floaters = document.getElementById("floaters");
-    function spawnHearts(){
-      for(let i=0;i<18;i++){
-        const h = document.createElement("div");
-        h.className = "heart";
-        const left = Math.random()*100;
-        const dur = 6 + Math.random()*8;
-        const delay = Math.random()*6;
-        const size = 10 + Math.random()*14;
-        h.style.left = left + "vw";
-        h.style.bottom = (-20 - Math.random()*30) + "vh";
-        h.style.animationDuration = dur + "s";
-        h.style.animationDelay = delay + "s";
-        h.style.width = size + "px";
-        h.style.height = size + "px";
-        h.style.opacity = (0.2 + Math.random()*0.5).toFixed(2);
-        floaters.appendChild(h);
-      }
-    }
-   function spawnHearts(){
-  const STICKERS = [
-    "bat.png",
-    "batman.jpg",
-    "r spider.png",
-    "spidey.png",
-    "superman.jpg"
-  ];
+   /* =========================
+   Floating Marvel Stickers
+========================= */
 
-  for (let i = 0; i < 18; i++){
+const floaters = document.getElementById("floaters");
+
+const stickers = [
+  "spidey.png",
+  "r spider.png",
+  "bat.png",
+  "batman.jpg",
+  "superman.jpg"
+];
+
+function spawnStickers() {
+  for (let i = 0; i < 14; i++) {
     const img = document.createElement("img");
+    img.src = stickers[Math.floor(Math.random() * stickers.length)];
     img.className = "floaterSticker";
-    img.src = STICKERS[Math.floor(Math.random() * STICKERS.length)];
 
-    const left = Math.random() * 100;
-    const dur = 6 + Math.random() * 8;
-    const delay = Math.random() * 6;
-    const size = 34 + Math.random() * 34;
-
-    img.style.left = left + "vw";
-    img.style.bottom = (-20 - Math.random() * 30) + "vh";
-    img.style.animationDuration = dur + "s";
-    img.style.animationDelay = delay + "s";
-    img.style.width = size + "px";
-    img.style.height = size + "px";
-    img.style.opacity = (0.35 + Math.random() * 0.6).toFixed(2);
+    img.style.left = Math.random() * 100 + "vw";
+    img.style.bottom = "-20vh";
+    img.style.width = 40 + Math.random() * 40 + "px";
+    img.style.height = img.style.width;
+    img.style.animationDuration = 8 + Math.random() * 8 + "s";
+    img.style.animationDelay = Math.random() * 5 + "s";
 
     floaters.appendChild(img);
   }
 }
+
+spawnStickers();
 
     /***************
      * Step 1: question
