--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@ p{color:var(--muted)}
 const floaters = document.getElementById("floaters");
 
 const STICKERS = [
-  "spidey.png",
-  "r spider.png",
   "bat.png",
-  "batman.png",
+   "batman.png",
+   "r_spider.png",
+   "spidey.png",
   "superman.png"
 ];
 
